--- a/mapbox-fullscreen.html
+++ b/mapbox-fullscreen.html
@@ -22,6 +22,7 @@
         }
         
         :-webkit-full-screen #map-div {
+            top:0;
             width: 100%;
             height: 100%;
         }
