--- a/mapbox-fullscreen.html
+++ b/mapbox-fullscreen.html
@@ -21,7 +21,7 @@
             height:100%;
         }
         
-        :-webkit-full-screen #map-div {
+        :-webkit-full-screen #map-wrapper-div {
             top:0;
             width: 100%;
             height: 100%;
