--- a/mapbox-fullscreen.html
+++ b/mapbox-fullscreen.html
@@ -37,7 +37,7 @@
     </div> 
 	  
 <script type='text/javascript'>
-    var map = L.mapbox.map('map-div', 'examples.map-uci7ul8p');
+    var map = L.mapbox.map('map-div', 'examples.map-vyofok3q');
 </script>
 
 <script type='text/javascript'>	
