--- a/mapbox-fullscreen.html
+++ b/mapbox-fullscreen.html
@@ -37,6 +37,7 @@
     </div> 
 	  
 <script type='text/javascript'>
+L.mapbox.accessToken = 'pk.eyJ1IjoiY2FydG9nYWlhIiwiYSI6Ik1sVGZIcXcifQ.saIiGsKC6LPuVA7sp8wOnQ';
     var map = L.mapbox.map('map-div', 'cartogaia.map-ewmwmuvg');
 </script>
 
